# task-tracker-mcp

./: .env.example  .gitignore  pyproject.toml
api/: main.py
api/app/: main.py
api/app/config/: database.py
api/app/dependencies/: database.py
api/app/models/: __init__.py  models.py
api/app/routers/: __init__.py  notes.py
api/app/schemas/: __init__.py  notes.py
api/app/services/: __init__.py  notes_service.py
mcp/: mcp_server.py
mcp/schemas/: __init__.py  models.py
web/: web.py
