[project]
name = "mcp-pet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.14",
    "fastmcp>=2.10.2",
    "langchain-mcp-adapters>=0.1.8",
    "langchain-openai>=0.3.27",
    "langgraph>=0.5.1",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
    "typing>=3.10.0.0",
    "uvicorn>=0.35.0",
]
